# ssi-nigeria

./: Cargo.toml  README.md  credential-hierarchy.md  custom-ledger-architecture.md  engineering-standards.md  ssi-nigeria-blueprint.md  system-flaws.md  trust-and-authority.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_registry.rs  fuzz_target_1.rs
proptest-regressions/tests/: property_tests.txt
src/: lib.rs  main.rs
src/biometric/: card.rs  mod.rs
src/credential/: holder.rs  issuer.rs  mod.rs  offline_verifier.rs  revocation.rs  verifier.rs
src/governance/: court.rs  mod.rs
src/identity/: did.rs  keypair.rs  mod.rs
src/tests/: mod.rs  property_tests.rs
src/types/: credential.rs  financial.rs  governance.rs  mod.rs  presentation.rs  revocation.rs  selective.rs
