[package]
name = "ssi-nigeria"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = "0.4.44"
ed25519-dalek = "2.1.0"
multibase = "0.9"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11.0"
ssi = "0.16.0"
zeroize = { version = "1.8.2", features = ["derive"] }

[dev-dependencies]
proptest = "1.11.0"
